changed the output paths

--- a/src/app/scrappyard-content/scrappyard-content.component.html
+++ b/src/app/scrappyard-content/scrappyard-content.component.html
@@ -1,12 +1,12 @@
 <mat-tab-group>
-  <mat-tab is-active label="Tab one">
+  <mat-tab is-active label="About">
     <section is-active>
-      <mat-card full>
-        <mat-card-header>
-          <mat-card-title><h3>Welcome <i class="material-icons">share</i></h3></mat-card-title>
-        </mat-card-header>
+      <mat-card class="full">
+        <mat-card-title class="title">
+          <h2 class="tab-title">Welcome to Scrappyard</h2>
+        </mat-card-title>
         <mat-card-content>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.</p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus pellentesque eleifend lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.
         </mat-card-content>
         <mat-card-actions>
           <mat-chip-list>
@@ -16,15 +16,14 @@
       </mat-card>
     </section>
   </mat-tab>
-  <mat-tab label="Tab two">
+  <mat-tab label="Process">
     <section>
-      <mat-card full>
-        <div>
-          <h2>Tab two content</h2>
-          <i class="material-icons">share</i>
-        </div>
+      <mat-card class="full">
+        <mat-card-title class="title">
+          <h2 class="tab-title">Our process</h2>
+        </mat-card-title>
         <mat-card-content>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.</p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus pellentesque eleifend lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.
         </mat-card-content>
         <mat-card-actions>
           <mat-chip color="primary">Get Started</mat-chip>
@@ -32,15 +31,14 @@
       </mat-card>
     </section>
   </mat-tab>
-  <mat-tab label="Tab three">
+  <mat-tab label="Work">
     <section>
-      <mat-card full>
-        <div>
-          <h2>Tab three content</h2>
-          <i class="material-icons">share</i>
-        </div>
+      <mat-card class="full">
+        <mat-card-title class="title">
+          <h2 class="tab-title">Our work</h2>
+        </mat-card-title>
         <mat-card-content>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.</p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus pellentesque eleifend lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sagittis pellentesque lacus eleifend lacinia.
         </mat-card-content>
         <mat-card-actions>
           <mat-chip color="primary">Get Started</mat-chip>
