--- a/src/app/scrappyard-footer/scrappyard-footer.component.html
+++ b/src/app/scrappyard-footer/scrappyard-footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-content">
-  <div mat-logo>Scrappyard LP</div>
+  <a href="#">Scrappyard LP</a>
   <a href="#">Help</a>
   <a href="#">Privacy & Terms</a>
 </div>
