--- a/src/app/scrappyard-footer/scrappyard-footer.component.scss
+++ b/src/app/scrappyard-footer/scrappyard-footer.component.scss
@@ -3,16 +3,18 @@
   display: flex;
   flex-direction: row;
   position-content: flex-start;
-  justify-content: space-evenly;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: #000;
+  font-size: .8rem;
   font-family: "Proxima nova","Helvetica","Myriad",sans-serif;
   color: #fff;
   padding: 1em;
+  z-index: 2;
 
   a {
+    padding: 0 10px 0 0;
   	color: #fff;
   	text-decoration: none;
   }
