--- a/src/app/scrappyard-nav/scrappyard-nav.component.html
+++ b/src/app/scrappyard-nav/scrappyard-nav.component.html
@@ -6,13 +6,6 @@
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="!(isHandset$ | async)">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
     <mat-toolbar color="primary">
       <button
         type="button"
@@ -20,9 +13,25 @@
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <i class="material-icons">chevron_left</i>
       </button>
-      <span>scrappyard</span>
+    </mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item href="#">The team</a>
+      <a mat-list-item href="#">Contact us</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar class="mat-primary" color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <i class="material-icons">menu</i>
+      </button>
+      <span class="title">Scrappyard</span>
     </mat-toolbar>
       <app-scrappyard-content></app-scrappyard-content>
   </mat-sidenav-content>
