--- a/src/app/scrappyard-nav/scrappyard-nav.component.scss
+++ b/src/app/scrappyard-nav/scrappyard-nav.component.scss
@@ -3,10 +3,15 @@
 }
 
 .sidenav {
-  width: 200px;
+  width: 250px;
 }
 
-.mat-toolbar.mat-primary {
+.mat-toolbar .mat-primary {
   position: sticky;
   top: 0;
+}
+
+.title {
+  font-family: "Proxima Nova";
+  font-weight: light;
 }
