--- a/src/app/scrappyard-nav/scrappyard-nav.component.html
+++ b/src/app/scrappyard-nav/scrappyard-nav.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav
     #drawer
     class="sidenav"
-    fixedInViewport="true"
+    fixedInViewport="false"
     [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="!(isHandset$ | async)">
