chnged everything but firebase name to scrapyard one p

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,6 @@ html,body,h1,h2,h3,h4,h5,h6,a,p,span,div {
 }
 
 .main {
-  background-color: #fff;
+  background-color: #ffffff;
   padding-bottom: calc(100% - 100px);
 }
