--- a/src/app/home-tab/home-tab.component.html
+++ b/src/app/home-tab/home-tab.component.html
@@ -1,10 +1,10 @@
 <mat-card class="full">
 	<mat-card-title class="title">
-	  <h1 class="tab-title">Welcome to Scrappyard</h1>
-	  <h2>Rapid prototyping for the enterprise.</h2>
+	  <h1 class="tab-title">Welcome to Scrapyard</h1>
 	</mat-card-title>
 	<mat-card-content>
-	  Enterprise and SMBs are working to solve business problems that require an internal or external facing application. When product managers are in a ‘build or buy’ discussion, even before a decision has been made to build wouldn’t it be great to be able to actually see the thing you are going to build as a functional prototype?
+		<h2>Rapid prototyping for the enterprise.</h2>
+	  	<p>Enterprise and SMBs are working to solve business problems that require an internal or external facing application. When product managers are in a ‘build or buy’ discussion, even before a decision has been made to build wouldn’t it be great to be able to actually see the thing you are going to build as a functional prototype?</p>
 	</mat-card-content>
 	<mat-card-actions>
 	  <mat-chip-list>
