--- a/src/app/scrapyard-nav/scrapyard-nav.component.html
+++ b/src/app/scrapyard-nav/scrapyard-nav.component.html
@@ -31,8 +31,8 @@
         *ngIf="isHandset$ | async">
         <i class="material-icons">menu</i>
       </button>
-      <span class="title">Scrappyard</span>
+      <span class="title">Scrapyard</span>
     </mat-toolbar>
-      <app-scrappyard-content></app-scrappyard-content>
+      <app-scrapyard-content></app-scrapyard-content>
   </mat-sidenav-content>
 </mat-sidenav-container>
