--- a/src/app/scrapyard-footer/scrapyard-footer.component.html
+++ b/src/app/scrapyard-footer/scrapyard-footer.component.html
@@ -1,5 +1,5 @@
 <div class="footer-content">
-  <a href="#">Scrappyard LP</a>
+  <a href="#">Scrapyard LP</a>
   <a href="#">Help</a>
   <a href="#">Privacy & Terms</a>
 </div>
