fixed several issues around get-started but still get platform error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-scrapyard-nav></app-scrapyard-nav>
+<header>
+	<app-scrapyard-nav></app-scrapyard-nav>
+</header>
+<div class="main-content">
+	<app-scrapyard-content></app-scrapyard-content>
+</div>
+<footer>
+	<app-scrapyard-footer></app-scrapyard-footer>
+</footer>
+<app-get-started-sheet></app-get-started-sheet>
