--- a/src/app/home-tab/home-tab.component.html
+++ b/src/app/home-tab/home-tab.component.html
@@ -7,8 +7,6 @@
 	  	<p>Enterprise and SMBs are working to solve business problems that require an internal or external facing application. When product managers are in a ‘build or buy’ discussion, even before a decision has been made to build wouldn’t it be great to be able to actually see the thing you are going to build as a functional prototype?</p>
 	</mat-card-content>
 	<mat-card-actions>
-	  <mat-chip-list>
-	    <mat-chip color="primary">Get Started</mat-chip>
-	  </mat-chip-list>
+		<app-get-started></app-get-started>
 	</mat-card-actions>
 </mat-card>
