--- a/src/app/work-tab/work-tab.component.html
+++ b/src/app/work-tab/work-tab.component.html
@@ -1,11 +1,11 @@
 <mat-card class="full">
   <mat-card-title class="title">
-    <h2 class="tab-title">Tell me why</h2>
+    <h2 class="tab-title">Show me the work</h2>
   </mat-card-title>
   <mat-card-content>
-    <p>Well you are looking at one example right now. This site is built on the stack we use. It was built in less than two weeks. It’s a single page web application but it’s also a progressive web app (PWA). Try it on your phone.</p>
+    <p>Well you are looking at one example right now. This site is built on the stack we use. It was built in less than two weeks. It’s a single page web application but it’s also a progressive web app (PWA). <a href="#">Try it on your phone</a></p>
     <p>We build all of our prototypes as responsive, PWAs so it doesn’t matter whether the final product will be a site or a native app, the prototype experience will be the same.</p>
-    <p>Much of our work is under NDA but here are a few (anonymized) peeks at what we’ve done (video).</p>
+    <p>Much of our work is under NDA but here are a few (anonymized) peeks at what we’ve done <a href="#">(video).</a></p>
   </mat-card-content>
   <mat-card-actions>
     <mat-chip color="primary">Get Started</mat-chip>
